[project]
name = "nclient"
version = "0.1.0"
description = "Esto es un cliente de Prueba de la API de n1co pueden testear el cliente con el test.py"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]

readme = "README.md"

requires-python = ">=3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nclient"]